# refida

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  cli.py  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml  pyrightconfig.json  settings.py  setup.cfg  streamlit_app.py
.github/workflows/: test.yml
.streamlit/: config.toml
compose/: Dockerfile  docker-compose.override.yml.example  docker-compose.yml
data/0_external/: README.md
data/0_raw/: .gitignore  README.md
data/1_interim/: README.md
data/2_final/: README.md
docs/: poster.afpub
refida/: __init__.py  data.py  etl.py  explain.py  features.py  models.py  search_index.py  searchindex.py  visualize.py
scripts/: docker.sh  streamlit.sh
tests/: fixtures.py  test_etl.py  test_features.py
