[tool.poetry]
name = "refida"
version = "0.3.0"
description = ""
authors = ["King's Digital Lab"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "~3.9"
beautifulsoup4 = "^4.10"
streamlit = "^1.3.1"
watchdog = "^2.1.6"
txtai = {extras = ["pipeline"], version = "^4.0.0"}
nltk = "^3.7"
typer = "^0.4.0"
streamlit-aggrid = "^0.2.3"
spacy = "^3.2.4"
spacy-streamlit = "^1.0.3"
geopy = "^2.2.0"
pydeck = "^0.7.1"
en-core-web-trf = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.2.0/en_core_web_trf-3.2.0.tar.gz"}
plotly = "^5.7.0"
joblib = "^1.1.0"
geojson = "^2.5.0"
shap = "^0.40.0"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
ipython = "*"
isort = "*"
pytest= "*"
flake8 = "^4.0.1"
neovim = "^0.3.1"

[tool.flake8]
max-line-length = 88
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,edtf,node_modules"

[tool.pycodestyle]
max-line-length = 88
exclude = ".tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
